[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome_actus_lib"
version = "0.1.0"
description = "Package for Financial Contract Modelling with the ACTUS Standard"
authors = [{ name = "Ovomaltiner", email = "whyaxis21@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "numpy",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/your_package"
Documentation = "https://your_package.readthedocs.io/"
Repository = "https://github.com/yourusername/your_package"
Issues = "https://github.com/yourusername/your_package/issues"
